@@ -1,10 +1,11 @@
 package com.bank.banksystem;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import jakarta.servlet.*;
 import jakarta.servlet.http.*;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -22,12 +23,14 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
         String path = request.getServletPath();
 
-        
+        // skill auth for login, actuator and error paths
         if (path.startsWith("/auth/login") || path.startsWith("/actuator") || path.startsWith("/error")) {
             System.out.println("[JwtAuthFilter] Skipping JWT filter for: " + path);
             filterChain.doFilter(request, response);
             return;
         }
+
+        System.out.println("[JwtAuthFilter] Checking JWT for: " + path);
 
         String authHeader = request.getHeader("Authorization");
 
@@ -36,18 +39,25 @@ public class JwtAuthFilter extends OncePerRequestFilter {
                 String token = authHeader.substring(7);
                 Claims claims = JwtUtil.parseToken(token);
 
-                // get username
+                // username
                 String username = claims.getSubject();
 
-                // link to spring security context
+                // add role user
                 UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(username, null, Collections.emptyList());
+                        new UsernamePasswordAuthenticationToken(
+                                username,
+                                null,
+                                List.of(new SimpleGrantedAuthority("ROLE_USER"))
+                        );
+
                 SecurityContextHolder.getContext().setAuthentication(authentication);
 
             } catch (JwtException e) {
                 response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Invalid JWT Token");
                 return;
             }
+        } else {
+            System.out.println("[JwtAuthFilter] Missing Authorization header");
         }
 
         filterChain.doFilter(request, response);
